--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,14 +1,13 @@
----
-layout: archive
+
 title: "Portfolio"
 permalink: /portfolio/
 author_profile: true
----
 
-{% include base_path %}
-
-
-{% for post in site.portfolio %}
-  {% include archive-single.html %}
-{% endfor %}
+I am a highly motivated and dynamic Data Scientist with over 2.5 years of experience in software development, showcasing
+mastery in diverse programming languages such as Python, Java, and more. I specialize in crafting and deploying strategic
+machine learning models, demonstrating expertise in data cleaning, feature engineering, and model evaluation. My unique fusion
+of analytical and software engineering skills fuels the delivery of scalable solutions. Renowned for my proactive approach and
+passion for innovation, I thrive in cross-functional collaborations, effortlessly communicating intricate insights. Staying at the
+forefront of emerging technologies is not just a commitment but a driving force, reflecting my unwavering dedication to pushing
+the boundaries in the ever-evolving realm of data science.
 
